# signature-schemes

./: .gitignore  README.md  benchmarks.py  pyproject.toml
.github/workflows/: ci.yml
signatures/: __init__.py  bls.py  ecdsa.py  ed25519.py  schnorr.py
tests/: test_bls.py  test_ecdsa.py  test_ed25519.py  test_schnorr.py
