[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "signature-schemes"
version = "0.1.0"
description = "Pure-Python implementations of ECDSA (secp256k1), Schnorr (BIP-340), Ed25519, and BLS digital signature schemes"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "py_ecc>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
